--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "karma-junit-reporter": "^0.3.3",
     "ng-annotate": "^1.0.2",
     "node-sass": "^3.3.1",
-    "protractor": "github:mstrutt/protractor",
+    "protractor": "github:mstrutt/protractor#master",
     "selenium-webdriver": "^2.45.1",
     "shelljs": "^0.5.3",
     "wiredep": "^2.2.2"
