setting up unit tests with karma

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "angular": "~1.4.4",
     "angular-material": "~0.10.1",
+    "angular-mocks": "~1.4.4",
     "angular-ui-router": "ui-router#~0.2.15"
+  },
+  "resolutions": {
+    "angular": "1.4.5-build.4188+sha.7e67e52"
   }
 }
