--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app/index.html",
   "scripts": {
     "postinstall": "bower install && npm run wiredep",
-    "test": "gulp lint && protractor ./tests/protractor.conf.js",
+    "karma": "karma start tests/karma.conf.js",
+    "karma-single-run": "karma start tests/karma.conf.js --single-run",
+    "protractor": "protractor tests/protractor.conf.js",
+    "test": "gulp lint && npm run protractor && npm run karma-single-run",
     "wiredep": "wiredep -s app/index.html"
   },
   "author": "Big Wednesday IO",
@@ -22,6 +25,9 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.3",
     "ng-annotate": "^1.0.2",
     "node-sass": "^3.3.1",
