testing request validation inteceptor

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "karma": "karma start tests/karma.conf.js",
     "karma-single-run": "karma start tests/karma.conf.js --single-run",
     "protractor": "protractor tests/protractor.conf.js",
+    "setuptest": "node_modules/protractor/bin/webdriver-manager update && node_modules/protractor/bin/webdriver-manager start",
     "test": "gulp lint && npm run protractor && npm run karma-single-run",
     "wiredep": "wiredep -s app/index.html"
   },
