--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "bower": "^1.5.2",
     "connect-history-api-fallback": "^1.1.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^1.0.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
@@ -32,9 +33,9 @@
     "karma-junit-reporter": "^0.3.3",
     "ng-annotate": "^1.0.2",
     "node-sass": "^3.3.1",
-    "protractor": "github:mstrutt/protractor#master",
+    "protractor": "^2.2.0",
     "selenium-webdriver": "^2.45.1",
     "shelljs": "^0.5.3",
-    "wiredep": "^2.2.2"
+    "wiredep": "^3.0.0-beta"
   }
 }
