--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "~1.4.4",
     "angular-material": "~0.10.1",
     "angular-mocks": "~1.4.4",
-    "angular-ui-router": "ui-router#~0.2.15"
+    "angular-ui-router": "ui-router#~0.2.15",
+    "velocity": "~1.2.3"
   },
   "resolutions": {
     "angular": "1.4.5-build.4188+sha.7e67e52"
