--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,11 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
-    "angular-material": "~0.10.1",
+    "angular-material": "~0.11.4",
     "angular-mocks": "~1.4.4",
     "angular-ui-router": "ui-router#~0.2.15",
-    "velocity": "~1.2.3"
+    "velocity": "~1.2.3",
+    "lodash": "~3.10.1"
   },
   "resolutions": {
     "angular": "1.4.5-build.4188+sha.7e67e52"
