--- a/bower.json
+++ b/bower.json
@@ -15,14 +15,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.4",
+    "angular": "~1.4.7",
     "angular-material": "~0.11.4",
-    "angular-mocks": "~1.4.4",
+    "angular-mocks": "~1.4.7",
     "angular-ui-router": "ui-router#~0.2.15",
     "velocity": "~1.2.3",
-    "lodash": "~3.10.1"
-  },
-  "resolutions": {
-    "angular": "1.4.5-build.4188+sha.7e67e52"
+    "lodash": "~3.10.1",
+    "angular-messages": "~1.4.7"
   }
 }
